docs/bottleneck.txt
╭────────────────────────────────────────────────────────────╮
│ ✻ Welcome to Claude Code!                                  │
│                                                            │
│   /help for help, /status for your current setup           │
│                                                            │
│   cwd: /mnt/c/projects/credit-clarity/mcp-codebase-server  │
╰────────────────────────────────────────────────────────────╯


 What's new:
  • MCP: Support multiple config files with `--mcp-config file1.json file2.json`
  • MCP: Press Esc to cancel OAuth authentication flows
  • Bash: Improved command validation and reduced false security warnings
  • UI: Enhanced spinner animations and status line visual hierarchy
  • Linux: Added support for Alpine and musl-based distributions (requires separate ripgrep installation)
● Compact summary (ctrl+r to expand)
  ⎿  Read ../MCP_CODEBASE_USAGE.md (193 lines)
  ⎿  Read ../mcp-config.json (19 lines)
  ⎿  Read src/index.ts (546 lines)
  ⎿  Read .gitignore (35 lines)
  ⎿  Todo list read (5 items)

● Your MCP codebase server is successfully built and ready for use! The server provides 13 powerful tools for
  analyzing your Credit Clarity codebase:

  🚀 Current Status:
  - ✅ Server built and compiled successfully
  - ✅ All 13 tools implemented (file operations, code search, git integration, etc.)
  - ✅ Configuration file ready at /mnt/c/projects/credit-clarity/mcp-config.json
  - ✅ Documentation created at /mnt/c/projects/credit-clarity/MCP_CODEBASE_USAGE.md

  🔧 To start using:

● Bash(npm start)
  ⎿  Error: /home/rorschache/.profile: line 35: /home/rorschache/.deno/envexport: No such file or directory
     /home/rorschache/.profile: line 44: /home/rorschache/.deno/envexport: No such file or directory
     file:///mnt/c/projects/credit-clarity/mcp-codebase-server/dist/index.js:7
     import { glob } from 'fast-glob';
              ^^^^
     SyntaxError: Named export 'glob' not found. The requested module 'fast-glob' is a CommonJS module, which 
     may not support all module.exports as named exports.
     CommonJS modules can always be imported via the default export, for example using:

     import pkg from 'fast-glob';
     const { glob } = pkg;
     … +11 lines (ctrl+r to see all)

● Need to fix the ES module import issue. Let me update the code:

● Update(src/index.ts)
  ⎿  Updated src/index.ts with 1 addition and 1 removal
       11    import { z } from 'zod';
       12    import * as fs from 'fs/promises';
       13    import * as path from 'path';
       14 -  import { glob } from 'fast-glob';
       14 +  import glob from 'fast-glob';
       15    import ignore from 'ignore';
       16    
       17    // Configuration

● Bash(npm run build)
  ⎿  > mcp-codebase-server@1.0.0 build                                                              
     > tsc
     /home/rorschache/.profile: line 35: /home/rorschache/.deno/envexport: No such file or directory
     … +1 line (ctrl+r to expand)

● Bash(npm start)
  ⎿  > mcp-codebase-server@1.0.0 start                                                              
     > node dist/index.js
     /home/rorschache/.profile: line 35: /home/rorschache/.deno/envexport: No such file or directory
     … +3 lines (ctrl+r to expand)

● Perfect! Your MCP codebase server is now running successfully. You can now connect to it using any
  MCP-compatible client with the configuration:

  {
    "mcpServers": {
      "codebase": {
        "command": "node",
        "args": ["/mnt/c/projects/credit-clarity/mcp-codebase-server/dist/index.js"],
        "env": {
          "CODEBASE_ROOT": "/mnt/c/projects/credit-clarity"
        }
      }
    }
  }

  The server provides 13 tools for comprehensive codebase analysis including search, file operations, git
  integration, and code analysis - perfect for debugging your OCR pipeline and exploring your Credit Clarity
  architecture.

> how do I use these tools?

● You can use these MCP tools through any MCP-compatible client. Here are the main ways:

  🔧 MCP Client Options

  1. Claude Desktop App (Recommended)

  - Add the config to your Claude Desktop settings
  - Location: ~/Library/Application Support/Claude/claude_desktop_config.json (Mac) or
  %APPDATA%\Claude\claude_desktop_config.json (Windows)
  - Tools appear automatically in conversations

  2. Claude Code CLI (You're using now)

  - Your current session can use MCP servers if configured
  - Check: /help for MCP integration details

  3. Other MCP Clients

  - Any client supporting the Model Context Protocol

  📝 Using the Tools

  Once connected, you can ask questions like:

  "Search for all functions named 'detect_credit_bureau'"
  "Show me the structure of the backend directory"
  "Find all TODO comments in Python files"
  "List files in the services directory"
  "Show git status of the project"

  The client automatically calls the appropriate MCP tools (like search_code, get_codebase_structure,
  find_todos, etc.) and returns formatted results.

  🚀 Example Requests

  "Find all API endpoints in the FastAPI backend"
  "Show me recent git commits"
  "Search for 'OptimizedCreditReportProcessor' in the codebase"
  "List all Python files in backend/services"
  "Find functions that contain 'duplicate' in their name"

  The tools work behind the scenes - you just ask natural language questions about your codebase!

  Want me to help you set up a specific MCP client?

> Do you see any bottlenecks or possible issues in this codebase? what recommendations do you recommend?

● Task(Analyze codebase for bottlenecks)
  ⎿  Done (20 tool uses · 113.4k tokens · 2m 33.9s)                                                           

● Based on the comprehensive analysis, here are the critical bottlenecks and recommendations for your Credit
  Clarity codebase:

  🚨 Critical Issues (Fix Immediately)

  1. OCR Processing Pipeline - Major Performance Bottleneck

  - Problem: Processing takes 2-15 minutes per file, causing timeouts
  - Location: backend/services/optimized_processor.py
  - Impact: Users abandon uploads, server resources exhausted

  Recommendations:
  - Implement proper queue system (Redis/Celery) for background processing
  - Add chunking for large PDFs (process pages in parallel)
  - Stream processing instead of loading entire files in memory

  2. Database Performance Issues

  - Problem: Missing indexes causing 300-500ms query times
  - Location: Database models and queries
  - Fix: Add indexes on frequently queried fields

  3. Frontend Bundle Size (8MB+)

  - Problem: Massive bundle loading AI libraries client-side
  - Location: frontend/src/
  - Fix: Move AI processing to backend, implement code splitting

  ⚡ High Priority Performance Issues

  4. Memory Leaks in Concurrent Processing

  - Location: backend/main.py:1750-1800
  - Problem: PDF objects not properly released
  - Fix: Implement proper resource cleanup with context managers

  5. N+1 Database Queries

  - Location: API endpoints fetching related data
  - Fix: Use eager loading with joinedload()

  🔒 Security Concerns

  6. Exposed Credentials

  - Problem: API keys visible in config files
  - Fix: Move to environment variables + secret management

  7. Insufficient Input Validation

  - Location: File upload endpoints
  - Fix: Add file type validation, size limits, virus scanning

  📈 Scalability Recommendations

  8. Implement Proper Caching

  - Add Redis for session data and processed results
  - Implement CDN for static assets

  9. Database Optimization

  - Add connection pooling
  - Implement read replicas for analytics queries

  10. Microservices Architecture

  - Separate OCR processing into dedicated service
  - Implement API gateway for better load distribution

  🎯 Implementation Priority

  Week 1-2 (Emergency):
  1. Fix memory leaks in OCR processor
  2. Add database indexes
  3. Secure exposed credentials

  Week 3-6 (Performance):
  1. Implement queue-based processing
  2. Optimize frontend bundle
  3. Add proper caching

  Month 2-3 (Architecture):
  1. Migrate to microservices
  2. Implement monitoring/alerting
  3. Add comprehensive testing

  Would you like me to dive deeper into any specific area or help implement these fixes?


